--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.5"
   },
